--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
-    "formik": "^2.2.9",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,8 +16,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "sass": "^1.38.0",
-    "web-vitals": "^1.1.2",
-    "yup": "^0.32.9"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
