--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.1.2",
     "react-otp-input": "^2.4.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
