--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
+    "env-cmd": "^10.1.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.1.2",
     "react-otp-input": "^2.4.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
