--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
+    "emoji-picker-react": "^3.4.8",
     "env-cmd": "^10.1.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
