--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal-image": "^2.5.0",
+    "react-modal-video": "^1.2.8",
     "react-otp-input": "^2.4.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
