--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "emoji-picker-react": "^3.4.8",
     "env-cmd": "^10.1.0",
+    "firebase": "^9.5.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,6 +26,7 @@
     "sockjs-client": "^1.5.2",
     "stompjs": "^2.3.3",
     "sweetalert2": "^11.1.4",
+    "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
