--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_BASE_URL = http://localhost:8080/api/
-REACT_APP_WEB_SOCKET = http://localhost:8080/ws
+REACT_APP_BASE_URL = http://chatappmongoelasticbeanstalk-env.eba-qzcfuyxf.ap-southeast-1.elasticbeanstalk.com/api/
+REACT_APP_WEB_SOCKET = http://chatappmongoelasticbeanstalk-env.eba-qzcfuyxf.ap-southeast-1.elasticbeanstalk.com/ws
 
 
 REACT_APP_FIREBASE_KEY = AIzaSyDF_p6gd0UE9kDu90aWcoRnNnBgxNtwQe4
